<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Profile Button at the top right corner -->
    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="showProfile"
        android:padding="8dp"
        android:text="@string/profile" />

    <Button
        android:id="@+id/button_recommend_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/meetingButton"
        android:onClick="showRecommendActivity"
        android:padding="8dp"
        android:text="@string/recommend_friends" />


    <!-- Rest of the layout content goes here -->
    <Button
        android:id="@+id/meetingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="showMeetings"
        android:padding="8dp"
        android:text="@string/meetings" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:id="@+id/friendList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friends" />

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="300dp">

        <LinearLayout
            android:id="@+id/userList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Users" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

